Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-323

Should not append index to MDT name

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • None
    • Lustre 2.1.0
    • None
    • 3
    • 5025

      Lustre: MDS mdd_obd-lustre-MDT0000-0: lustre-OST0002_UUID now active, resetting orphans

      This should be mdd_obd-lustre-MDT0000 instead of mdd_obd-lustre-MDT0000-0 since the index is already included in the name.

            di.wang Di Wang (Inactive)
            johann Johann Lombardi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: