LU-323 Not append index at the end of mdd_obd name

Remove the index from mdd_obd_xxx, since the dev_name already
includes that.

Change-Id: I20c61d45477ac0843aed3f0e9de23b0badf723ae
Signed-off-by: Wang Di <di.wang@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/548
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Tested-by: Hudson
Reviewed-by: Johann Lombardi <johann@whamcloud.com>